Added Entity "Persons" in HTML API (in Swagger, Controller, neo helper and in views) - JSON API still without "Persons"
